Revamp index.html structure and content

--- a/index.html
+++ b/index.html
@@ -1,12 +1,51 @@
-<!-- index.html -->
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Az én weboldalam</title>
-  </head>
-  <body>
-    <h1>Szia, ez az én első weboldalam!</h1>
-    <p>Ezt GitHub-ról futtatom 🚀</p>
-  </body>
+<html lang="hu">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DROP iN BMX</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <!-- Fejléc -->
+  <header>
+    <h1>DROP iN BMX</h1>
+    <nav>
+      <ul>
+        <li><a href="#info">Infó</a></li>
+        <li><a href="#eredmenyek">Eredmények</a></li>
+        <li><a href="#galeria">Galéria</a></li>
+        <li><a href="#kontakt">Kapcsolat</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Fő tartalom -->
+  <main>
+    <section id="info">
+      <h2>Rólunk</h2>
+      <p>A DROP iN BMX sorozat minden szintű bringásnak szól: kezdőtől a profiig. Közösségi élmény, laza hangulat, profi szervezés.</p>
+    </section>
+
+    <section id="eredmenyek">
+      <h2>Eredmények</h2>
+      <p>Itt hamarosan láthatók lesznek az aktuális versenyek eredményei.</p>
+    </section>
+
+    <section id="galeria">
+      <h2>Galéria</h2>
+      <p>Képek és videók a legjobb pillanatokról.</p>
+    </section>
+
+    <section id="kontakt">
+      <h2>Kapcsolat</h2>
+      <p>Email: info@dropinbmx.hu</p>
+    </section>
+  </main>
+
+  <!-- Lábléc -->
+  <footer>
+    <p>&copy; 2025 DROP iN BMX</p>
+  </footer>
+</body>
 </html>
